--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -1,15 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
    "source": [
     "# Example\n",
     "of the last added functionalities in onlineSG"
@@ -19,7 +19,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -44,7 +46,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -59,9 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -75,51 +81,31 @@
     "import source.players.defenders as defenders\n",
     "import source.runner as runner\n",
     "import source.players.detection as detection \n",
+    "import source.util as util\n",
     "\n",
     "from source.util import *\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from importlib import *\n",
-    "from source.util import *\n",
     "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(\"ciao\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#c = runner.Configuration(g, \"detector\", print_results=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'source.players.detection' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/players/detection.py'>"
+       "<module 'source.util' from '/home/onlinesg/onlineSG/source/util.py'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,36 +121,170 @@
     "reload(parsers)\n",
     "reload(game)\n",
     "#reload(environment)\n",
-    "reload(detection)"
+    "reload(detection)\n",
+    "reload(util)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.312405, 0.324887, 0.084612]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "time_horizon = 100\n",
-    "T = 4\n",
-    "targets = (5,4,8,1)\n",
-    "values = tuple((v, v) for v in targets)\n",
-    "distribution1 = (0.17,0.8, 0.01, 0.02)\n",
-    "g = game.Game(values, time_horizon)\n",
-    "agent = detection.HOLMES(g, 0, 1, 1)\n",
-    "#profiles = [attackers.StackelbergAttacker(g, 1, 1)] #,\n",
-    "profiles = [attackers.StochasticAttacker(g, 1, 1, *distribution1)]#, attackers.StochasticAttacker(g, 1, 1, *distribution2)] #,\n",
-    "attacker = attackers.StackelbergAttacker(g, 1, 1)\n",
-    "#attacker = attackers.StochasticAttacker(g, 1, 1, *distribution1)\n",
-    "g.set_players([agent], [attacker], profiles)"
+    "targets_dict = {i:[] for i in range(2,13)}\n",
+    "T = 15 #np.random.randint(2,10)\n",
+    "time_horizon =1000\n",
+    "while sum([len(targets_dict[x]) for x in range(2,13)]) < 9:\n",
+    "    targets = [round(x,3) for x in util.gen_norm_targets(T)]\n",
+    "    values = tuple((v, v) for v in targets)\n",
+    "    g = game.Game(values, time_horizon)\n",
+    "    g.attackers = [1]\n",
+    "    g.defenders = [0]\n",
+    "    s = util.support(g)\n",
+    "    if len(targets_dict[len(s)])==0:\n",
+    "        targets_dict[len(s)].append(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "T = 3\n",
+    "P = 2\n",
+    "targets = translate(targets_dict[T][0])\n",
+    "distributions = []\n",
+    "for i in range(P):\n",
+    "    distributions.append(tuple(gen_distr(T)))\n",
+    "values = tuple((v, v) for v in targets)\n",
+    "g = game.Game(values, time_horizon)\n",
+    "#print(T, targets)\n",
+    "profiles = [attackers.StackelbergAttacker(g, 1)]\n",
+    "for d in distributions:\n",
+    "    #print(d)\n",
+    "    profiles.append(attackers.StochasticAttacker(g, 1, 1, *d))\n",
+    "agent = detection.HOLMES(g, 0, 1, 1)\n",
+    "attacker = profiles[0]\n",
+    "g.set_players([agent], [attacker], [p for p in profiles if p != attacker])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "66"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T = 3\n",
+    "P * P * T + T * T * T * P"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14.923636363636366"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2.16 * (456 / 66)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.18666680128528187,\n",
+       "  0.2751403007000473,\n",
+       "  0.3278924162835406,\n",
+       "  0.025855477191970767,\n",
+       "  0.18444500453915935],\n",
+       " [0.057268665858167929,\n",
+       "  0.22328435876112757,\n",
+       "  0.25615541905852562,\n",
+       "  0.17377864495579171,\n",
+       "  0.28951291136638713]]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[p.distribution for p in e.game.profiles if p != e.game.players[1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -173,9 +293,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -183,16 +305,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "□\t \t \t \t\n",
-      "5\t4\t8\t1\t\n",
-      " \t△\t \t \t\n",
-      "----------------------------\n",
-      " \t□\t \t \t\n",
-      "5\t4\t8\t1\t\n",
-      " \t△\t \t \t\n",
-      "{<StochasticAttacker id:1 resources:1>: 1.0, <StackelbergAttacker id:1 resources:1>: 0.0}\n",
-      "{0: (0.30434782608695643, 0.13043478260869565, 0.5652173913043479, 0.0), 1: [0, 1, 0, 0]}\n",
-      "2.4693214893341064\n"
+      "□\t \t \t\n",
+      "0.665\t0.727\t0.54\t\n",
+      " \t \t△\t\n",
+      "{<StochasticAttacker id:1 resources:1>: 0.0046744694796351741, <StackelbergAttacker id:1 resources:1>: 0.0, <StochasticAttacker id:1 resources:1>: 0.99532553052036488}\n",
+      "{0: (0.3643124030976371, 0.4185251004950875, 0.21716249640727533), 1: [0, 0, 1]}\n",
+      "2.069589853286743\n"
      ]
     }
    ],
@@ -207,9 +325,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "e.run_interaction()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (0.3690684156632389, 0.4282480801547355, 0.20268350418202563),\n",
+       " 1: [0, 0, 1]}"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.game.players[1].game.strategy_history[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (0.3690684156632389, 0.4282480801547355, 0.20268350418202563),\n",
+       " 1: [0, 0, 1]}"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.game.strategy_history[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (0, 1, 0), 1: [0, 0, 1]}"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.agent.profiles[0].game.strategy_history[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: (0.07000285365649891,\n",
+       "  0.30581066825329867,\n",
+       "  0.14416530551802176,\n",
+       "  0.3511386294556226,\n",
+       "  0.1288825431165581),\n",
+       " 1: [1, 0, 0, 0, 0]}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e.game.strategy_history[-1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -230,7 +456,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -241,7 +469,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -263,7 +493,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -274,7 +506,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -285,7 +519,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -296,7 +532,9 @@
    "cell_type": "code",
    "execution_count": 724,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -308,6 +546,8 @@
    "execution_count": 756,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -338,7 +578,9 @@
    "cell_type": "code",
    "execution_count": 757,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -360,7 +602,9 @@
    "cell_type": "code",
    "execution_count": 720,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -553,7 +797,9 @@
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -578,7 +824,9 @@
    "cell_type": "code",
    "execution_count": 76,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -589,7 +837,9 @@
    "cell_type": "code",
    "execution_count": 77,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
