notebook runner modified

--- a/notebooks/Experiments-Prepare.ipynb
+++ b/notebooks/Experiments-Prepare.ipynb
@@ -9,8 +9,7 @@
     }
    },
    "source": [
-    "# Experiments\n",
-    "of the last added functionalities in onlineSG"
+    "# Experiments-Prepare"
    ]
   },
   {
@@ -116,6 +115,7 @@
    "source": [
     "targets_dict = {i:[] for i in range(2,13)}\n",
     "T = 15 #np.random.randint(2,10)\n",
+    "time_horizon =1000\n",
     "while sum([len(targets_dict[x]) for x in range(2,13)]) < 9:\n",
     "    targets = [round(x,3) for x in util.gen_norm_targets(T)]\n",
     "    values = tuple((v, v) for v in targets)\n",
