--- a/notebooks/Experiments-Runner.ipynb
+++ b/notebooks/Experiments-Runner.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +121,9 @@
     "for root, dirs, files in os.walk(experiments_folder):\n",
     "    if files: #and functools.reduce(lambda x,y: x and y, [bool(csv_pattern.match(f)) for f in files]):\n",
     "        for f in files:\n",
-    "            if f.split('.csv')[0] not in dirs:\n",
+    "            if (csv_pattern.match(f) and f != \"batch.csv\" and\n",
+    "                f != \"stats.csv\" and f.split('.csv')[0] not in dirs):\n",
+    "                print(f)\n",
     "                b = runner.Batch(os.path.join(root, f), root)\n",
     "                b.parse_batch()\n",
     "                batches.append(b)"
