--- a/notebooks/Experiments-Prepare.ipynb
+++ b/notebooks/Experiments-Prepare.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
        "<module 'source.util' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/util.py'>"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -128,6 +128,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: [[0.995, 0.782]],\n",
+       " 3: [[0.65, 0.721, 0.859]],\n",
+       " 4: [[0.969, 0.925, 0.897, 0.977]],\n",
+       " 5: [[0.881, 0.691, 0.909, 0.662, 0.642]],\n",
+       " 6: [[0.635, 0.826, 0.593, 0.818, 0.758, 0.7]],\n",
+       " 7: [[0.811, 0.748, 0.776, 0.973, 0.682, 0.674, 0.792]],\n",
+       " 8: [[0.667, 0.869, 0.706, 0.804, 0.656, 0.655, 0.807, 0.644]],\n",
+       " 9: [[0.536, 0.576, 0.604, 0.568, 0.753, 0.554, 0.562, 0.535, 0.683]],\n",
+       " 10: [[0.737, 0.902, 0.758, 0.791, 0.887, 0.807, 0.837, 0.814, 0.758, 0.874]],\n",
+       " 11: [],\n",
+       " 12: []}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targets_dict"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -136,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -144,14 +176,17 @@
    "source": [
     "experiment_folder = \"../Experiments/Stackelberg_KnownStochastic\"\n",
     "time_horizon = 1000\n",
-    "defender = [\"br_mab1-1\", \"br_expert1-1\",\"b2bw2w1\"] #,\"holmes1-1\"]\n",
+    "att_incl = True\n",
+    "defender = [\"br_mab1-1\", \"br_expert1-1\",\"b2bw2w1\",\"holmes1-1\"]\n",
+    "attacker = [\"stackelberg1\"]\n",
     "if not os.path.exists(experiment_folder):\n",
     "    os.makedirs(experiment_folder)\n",
     "for T in range(2,11,2):\n",
     "    if not os.path.exists(experiment_folder + \"/\" + str(T)):\n",
     "        os.makedirs(experiment_folder + \"/\" + str(T))\n",
+    "    targets = util.translate(targets_dict[T][0])\n",
     "    for P in range(1,4):\n",
-    "        targets, profiles = util.gen_setting(T, P, targets_dict, time_horizon)\n",
+    "        profiles = util.gen_profiles(targets, [(attackers.StochasticAttacker, P)])\n",
     "        folder = experiment_folder + \"/\" + str(T) + \"/\" + str(P)\n",
     "        if not os.path.exists(folder):\n",
     "            os.makedirs(folder)\n",
@@ -159,10 +194,11 @@
     "        batch_file = batch_name + \".csv\"\n",
     "        batch_path = folder + \"/\" + batch_file\n",
     "        with open(batch_path, \"w+\") as f:\n",
-    "            f.write(util.print_header(targets, profiles))\n",
-    "            for p in profiles: # modify profiles...\n",
+    "            f.write(util.print_header(targets, P, att_incl))\n",
+    "            for a in attacker:\n",
     "                for d in defender: \n",
-    "                    f.write(util.print_row(targets, time_horizon,d,p))"
+    "                    f.write(util.gen_conf_row(d + \"_vs_\" + a, time_horizon, targets, d, a,\n",
+    "                                              [str(p) for p in profiles], att_incl))        "
    ]
   }
  ],
