various changes in source, new Watch Images notebook

--- a/notebooks/Experiments-Prepare.ipynb
+++ b/notebooks/Experiments-Prepare.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +78,7 @@
        "<module 'source.util' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/util.py'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -137,20 +137,20 @@
     {
      "data": {
       "text/plain": [
-       "{2: [[0.995, 0.782]],\n",
-       " 3: [[0.65, 0.721, 0.859]],\n",
-       " 4: [[0.969, 0.925, 0.897, 0.977]],\n",
-       " 5: [[0.881, 0.691, 0.909, 0.662, 0.642]],\n",
-       " 6: [[0.635, 0.826, 0.593, 0.818, 0.758, 0.7]],\n",
-       " 7: [[0.811, 0.748, 0.776, 0.973, 0.682, 0.674, 0.792]],\n",
-       " 8: [[0.667, 0.869, 0.706, 0.804, 0.656, 0.655, 0.807, 0.644]],\n",
-       " 9: [[0.536, 0.576, 0.604, 0.568, 0.753, 0.554, 0.562, 0.535, 0.683]],\n",
-       " 10: [[0.737, 0.902, 0.758, 0.791, 0.887, 0.807, 0.837, 0.814, 0.758, 0.874]],\n",
+       "{2: [[0.934, 0.981]],\n",
+       " 3: [[0.576, 0.991, 0.597]],\n",
+       " 4: [[0.755, 0.674, 0.773, 0.976]],\n",
+       " 5: [[0.75, 0.954, 0.913, 0.685, 0.892]],\n",
+       " 6: [[0.78, 0.754, 0.719, 0.589, 0.616, 0.783]],\n",
+       " 7: [[0.883, 0.737, 0.749, 0.805, 0.788, 0.984, 0.975]],\n",
+       " 8: [[0.776, 0.928, 0.938, 0.807, 0.783, 0.941, 0.841, 0.939]],\n",
+       " 9: [[0.985, 0.983, 0.944, 0.998, 0.815, 0.929, 0.818, 0.835, 0.828]],\n",
+       " 10: [[0.763, 0.692, 0.735, 0.859, 0.905, 0.719, 0.707, 0.699, 0.878, 0.77]],\n",
        " 11: [],\n",
        " 12: []}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,38 +168,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "experiment_folder = \"../Experiments/Stackelberg_KnownStochastic\"\n",
+    "experiment_folder = \"../Experiments/UnknownStochastic_Stackelberg\"\n",
     "time_horizon = 1000\n",
-    "att_incl = True\n",
-    "defender = [\"br_mab1-1\", \"br_expert1-1\",\"b2bw2w1\",\"holmes1-1\"]\n",
-    "attacker = [\"stackelberg1\"]\n",
+    "att_incl = False\n",
+    "defender = [\"br_mab1-1\", \"br_expert1-1\"] #,\"b2bw2w1\",\"holmes1-1\"]\n",
+    "#attacker = [\"sta1\"]\n",
     "if not os.path.exists(experiment_folder):\n",
     "    os.makedirs(experiment_folder)\n",
-    "for T in range(2,11,2):\n",
-    "    if not os.path.exists(experiment_folder + \"/\" + str(T)):\n",
-    "        os.makedirs(experiment_folder + \"/\" + str(T))\n",
+    "for T in range(2,5,2):\n",
+    "    if not os.path.exists(experiment_folder + \"/t\" + str(T)):\n",
+    "        os.makedirs(experiment_folder + \"/t\" + str(T))\n",
     "    targets = util.translate(targets_dict[T][0])\n",
-    "    for P in range(1,4):\n",
-    "        profiles = util.gen_profiles(targets, [(attackers.StochasticAttacker, P)])\n",
-    "        folder = experiment_folder + \"/\" + str(T) + \"/\" + str(P)\n",
+    "    mock_g = game.zs_game(targets, time_horizon)\n",
+    "    attacker = [str(attackers.StochasticAttacker(mock_g,1,1))]\n",
+    "    for P in range(1,2):\n",
+    "        profiles = util.gen_profiles(targets, [(attackers.UnknownStochasticAttacker, P), (attackers.StackelbergAttacker, P)])\n",
+    "        folder = experiment_folder + \"/t\" + str(T) + \"/p\" + str(P)\n",
     "        if not os.path.exists(folder):\n",
     "            os.makedirs(folder)\n",
     "        batch_name = \"_\".join(defender)\n",
     "        batch_file = batch_name + \".csv\"\n",
     "        batch_path = folder + \"/\" + batch_file\n",
     "        with open(batch_path, \"w+\") as f:\n",
-    "            f.write(util.print_header(targets, P, att_incl))\n",
+    "            f.write(util.print_header(targets, len(profiles), att_incl))\n",
     "            for a in attacker:\n",
     "                for d in defender: \n",
-    "                    f.write(util.gen_conf_row(d + \"_vs_\" + a, time_horizon, targets, d, a,\n",
+    "                    f.write(util.gen_conf_row(d + \"_vs_\" + a.split('1')[0], time_horizon, targets, d, a,\n",
     "                                              [str(p) for p in profiles], att_incl))        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rm -rf $experiment_folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
