--- a/notebooks/Experiments-Prepare.ipynb
+++ b/notebooks/Experiments-Prepare.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -187,8 +187,10 @@
     "    targets = util.translate(targets_dict[T][0])\n",
     "    mock_g = game.zs_game(targets, time_horizon)\n",
     "    attacker = [str(attackers.StochasticAttacker(mock_g,1,1))]\n",
-    "    for P in range(1,2):\n",
-    "        profiles = util.gen_profiles(targets, [(attackers.UnknownStochasticAttacker, P), (attackers.StackelbergAttacker, P)])\n",
+    "    for P in range(1,4):\n",
+    "        profiles = util.gen_profiles(targets, [(attackers.UnknownStochasticAttacker, 1),\n",
+    "                                               (attackers.StackelbergAttacker, 1),\n",
+    "                                               (attackers.StochasticAttacker, P)])\n",
     "        folder = experiment_folder + \"/t\" + str(T) + \"/p\" + str(P)\n",
     "        if not os.path.exists(folder):\n",
     "            os.makedirs(folder)\n",
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
