--- a/notebooks/Experiments-Runner.ipynb
+++ b/notebooks/Experiments-Runner.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -100,31 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "experiments_folder = \"../Experiments/Stackelberg_UnknownStochastic\""
+    "experiments_folder = \"../Experiments/UnknownStochastic_Stackelberg\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "br_mab1-1_br_expert1-1.csv\n",
-      "br_mab1-1_br_expert1-1.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batches = []\n",
     "csv_pattern = re.compile(\"^.+\\.csv$\")\n",
@@ -137,6 +128,28 @@
     "                b = runner.Batch(os.path.join(root, f), root)\n",
     "                b.parse_batch()\n",
     "                batches.append(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(batches)"
    ]
   },
   {
@@ -160,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +183,7 @@
     "    with redirect_stdout(f):\n",
     "        for b in batches:\n",
     "            print(b.results_folder_path)\n",
-    "            b.run(n=15, show_progress=False, workers=15)\n",
+    "            b.run(n=3, show_progress=False, workers=3)\n",
     "            c = b.configurations\n",
     "            util.plot_conf2(\"exp_regret\", c, b.results_folder_path)"
    ]
