--- a/notebooks/Experiments-Prepare.ipynb
+++ b/notebooks/Experiments-Prepare.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +54,8 @@
     "import source.players.base_defenders as base_defenders\n",
     "import source.players.defenders as defenders\n",
     "import source.runner as runner\n",
-    "import source.players.detection as detection \n",
+    "import source.players.detection as detection\n",
+    "import source.players.fabulous as fabulous\n",
     "\n",
     "import source.util as util\n",
     "import numpy as np\n",
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +79,7 @@
        "<module 'source.util' from '/home/lorenzo/Scrivania/Polimi/Thesis/code/onlineSG/source/util.py'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,6 +96,7 @@
     "reload(game)\n",
     "reload(environment)\n",
     "reload(detection)\n",
+    "reload(fabulous)\n",
     "reload(util)"
    ]
   },
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -137,20 +139,20 @@
     {
      "data": {
       "text/plain": [
-       "{2: [[0.934, 0.981]],\n",
-       " 3: [[0.576, 0.991, 0.597]],\n",
-       " 4: [[0.755, 0.674, 0.773, 0.976]],\n",
-       " 5: [[0.75, 0.954, 0.913, 0.685, 0.892]],\n",
-       " 6: [[0.78, 0.754, 0.719, 0.589, 0.616, 0.783]],\n",
-       " 7: [[0.883, 0.737, 0.749, 0.805, 0.788, 0.984, 0.975]],\n",
-       " 8: [[0.776, 0.928, 0.938, 0.807, 0.783, 0.941, 0.841, 0.939]],\n",
-       " 9: [[0.985, 0.983, 0.944, 0.998, 0.815, 0.929, 0.818, 0.835, 0.828]],\n",
-       " 10: [[0.763, 0.692, 0.735, 0.859, 0.905, 0.719, 0.707, 0.699, 0.878, 0.77]],\n",
+       "{2: [[0.991, 0.993]],\n",
+       " 3: [[0.942, 0.82, 0.909]],\n",
+       " 4: [[0.873, 0.966, 0.951, 0.738]],\n",
+       " 5: [[0.788, 0.939, 0.983, 0.713, 0.974]],\n",
+       " 6: [[0.781, 0.869, 0.91, 0.977, 0.87, 0.87]],\n",
+       " 7: [[0.828, 0.876, 0.973, 0.833, 0.809, 0.874, 0.961]],\n",
+       " 8: [[0.674, 0.688, 0.709, 0.79, 0.658, 0.979, 0.785, 0.697]],\n",
+       " 9: [[0.74, 0.752, 0.729, 0.797, 0.962, 0.999, 0.854, 0.78, 0.721]],\n",
+       " 10: [[0.716, 0.703, 0.719, 0.738, 0.793, 0.89, 0.698, 0.697, 0.886, 0.887]],\n",
        " 11: [],\n",
        " 12: []}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,16 +170,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "experiment_folder = \"../Experiments/UnknownStochastic_Stackelberg\"\n",
+    "experiment_folder = \"../Experiments/UnknownStochastic_Fabulous\"\n",
     "time_horizon = 1000\n",
-    "att_incl = False\n",
-    "defender = [\"br_mab1-1\", \"br_expert1-1\"] #,\"b2bw2w1\",\"holmes1-1\"]\n",
+    "att_incl = True\n",
+    "defender = [\"fabulous1\"] #[\"br_mab1-1\", \"br_expert1-1\"] #,\"b2bw2w1\",\"holmes1-1\"]\n",
     "#attacker = [\"sta1\"]\n",
     "if not os.path.exists(experiment_folder):\n",
     "    os.makedirs(experiment_folder)\n",
@@ -188,8 +190,8 @@
     "    mock_g = game.zs_game(targets, time_horizon)\n",
     "    attacker = [str(attackers.StochasticAttacker(mock_g,1,1))]\n",
     "    for P in range(1,4):\n",
-    "        profiles = util.gen_profiles(targets, [(attackers.UnknownStochasticAttacker, 1),\n",
-    "                                               (attackers.StackelbergAttacker, 1),\n",
+    "        profiles = util.gen_profiles(targets, [#(attackers.UnknownStochasticAttacker, 1),\n",
+    "                                               #(attackers.StackelbergAttacker, 1),\n",
     "                                               (attackers.StochasticAttacker, P)])\n",
     "        folder = experiment_folder + \"/t\" + str(T) + \"/p\" + str(P)\n",
     "        if not os.path.exists(folder):\n",
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -218,12 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fabulous.csv\r\n"
+     ]
+    }
+   ],
+   "source": [
+    " ls $experiment_folder/t2/p3"
+   ]
   }
  ],
  "metadata": {
@@ -242,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
