--- a/notebooks/Experiments-Runner.ipynb
+++ b/notebooks/Experiments-Runner.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -55,6 +55,7 @@
     "import source.players.defenders as defenders\n",
     "import source.runner as runner\n",
     "import source.players.detection as detection \n",
+    "import source.players.fabulous as fabulous\n",
     "\n",
     "import source.util as util\n",
     "import numpy as np\n",
@@ -100,18 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "experiments_folder = \"../Experiments/UnknownStochastic_Stackelberg\""
+    "experiment_folder = \"../Experiments/UnknownStochastic_Fabulous\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +120,7 @@
    "source": [
     "batches = []\n",
     "csv_pattern = re.compile(\"^.+\\.csv$\")\n",
-    "for root, dirs, files in os.walk(experiments_folder):\n",
+    "for root, dirs, files in os.walk(experiment_folder):\n",
     "    if files: #and functools.reduce(lambda x,y: x and y, [bool(csv_pattern.match(f)) for f in files]):\n",
     "        for f in files:\n",
     "            if (csv_pattern.match(f) and f != \"batch.csv\" and\n",
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +144,7 @@
        "6"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -183,7 +184,7 @@
     "    with redirect_stdout(f):\n",
     "        for b in batches:\n",
     "            print(b.results_folder_path)\n",
-    "            b.run(n=3, show_progress=False, workers=3)\n",
+    "            b.run(n=2, show_progress=False, workers=2)\n",
     "            c = b.configurations\n",
     "            util.plot_conf2(\"exp_regret\", c, b.results_folder_path)"
    ]
@@ -296,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
